@startuml
skinparam nodesep 100
skinparam ranksep 250
skinparam defaultFontSize 18

skinparam linetype ortho

hide circle
hide empty members
!theme blueprint

entity "System Info" as system_info {
    System ID <<CK>>
    DB-Version
    Current-Plot-Version
    Last-Update
    Description
}

entity "Build Team" as build_team {
    Build-Team-ID <<CK>>
    Name
    API-Key
    API-Create-Date
}

entity "Server" as server {
    Build-Team-ID <<CK>>
    Server-Name
}

entity "Country" as country {
    Country-Code <<CK>>
    Continent
    Material
    Custom-Model-Data
}

entity "City Project" as city_project {
    City-Project-ID <<CK>>
    Is-Visible
}

entity "Builder" as builder {
    UUID <<CK>>
    Name
    Score
    First-Slot
    Second-Slot
    Third-Slot
    Plot-Type
}

entity "Plot Difficulty" as plot_difficulty {
    Difficulty-ID <<CK>>
    Multiplier
    Score-Requirement
}

entity "Plot" as plot {
    Plot-ID <<CK>>
    Status
    Outline-Bounds
    Initial-Schematic
    Complete-Schematic
    Last-Activity-Date
    Is-Pasted
    MC-Version
    Plot-Version
    Plot-Type
    Created-By
    Create-Date
}

entity "Tutorial" as tutorial {
    Plot-Tutorial-ID <<CK>>
    Stage-ID
    Is-Complete
    First-Stage-Start-Date
    Last-Stage-Complete-Date
}

entity "Plot Review" as plot_review {
    Review-ID <<CK>>
    Rating
    Score
    Feedback
    Reviewed-By
    Review-Date
}

entity "Review Toggle Criteria" as review_toggle_criteria {
    Criteria-Name <<CK>>
    Is-Optional
}

build_team "belongs to \n1" *--- "assigned to \n0..*" city_project
build_team "assigned to \n0..*" -- "has 0..* reviewers" builder
build_team "assigned to \n0..*" -- "has \n0..*" review_toggle_criteria

plot_review "has 0..*\n notifications" -- "has 0..* to notify" builder
plot_review "has 0..*" *-- "has 0..*" plot
plot_review "has \n0..*" -- "has \n0..*" review_toggle_criteria

server "has 1" *-- "has 0..*" city_project
country "has 1" *-- "assigned to \n0..*" city_project

plot "assigned to\n 0..*" -- "built by 0..*" builder

plot "assigned to \n0..*" --* "in 1" city_project
plot "assigned to \n0..*" --* "has 1" plot_difficulty

tutorial "has \n1" --* "belongs to \n1" builder
@enduml